--- a/ticolandscape/config/database.yml
+++ b/ticolandscape/config/database.yml
@@ -14,7 +14,7 @@ default: &default
   encoding: utf8
   pool: 5
   username: root
-  password:
+  password: root
   socket: /var/run/mysqld/mysqld.sock
 
 development:
@@ -50,5 +50,5 @@ test:
 production:
   <<: *default
   database: ticolandscape_production
-  username: ticolandscape
-  password: <%= ENV['TICOLANDSCAPE_DATABASE_PASSWORD'] %>
+  #username: ticolandscape
+  #password: <%= ENV['TICOLANDSCAPE_DATABASE_PASSWORD'] %>
