--- a/ticolandscape/Gemfile
+++ b/ticolandscape/Gemfile
@@ -30,7 +30,12 @@ gem 'jbuilder', '~> 2.5'
 gem 'therubyracer', platforms: :ruby
 gem 'bootstrap-sass', '~> 3.2.0'
 gem 'autoprefixer-rails'
-
+#AWS
+gem 'aws-sdk-v1'
+gem 'carrierwave'
+gem 'fog'
+gem 'figaro'
+gem 'mini_magick'
 
 # Use Capistrano for deployment
 # gem 'capistrano-rails', group: :development
