update registration form

--- a/ticolandscape/Gemfile
+++ b/ticolandscape/Gemfile
@@ -39,6 +39,7 @@ gem 'carrierwave'
 gem 'mini_magick'
 
 gem 'simple_form'
+gem 'country_select'
 # Use Capistrano for deployment
 # gem 'capistrano-rails', group: :development
 
